--- a/index.html
+++ b/index.html
@@ -33,14 +33,15 @@
     </header>
 
     <main>
+        <!-- banner secttion html  -->
         <section class="banner">
             <div class="container">
                 <div class="banner__wrapper">
                     <div class="content__wrap">
                         <h3 class="banner__title">Start your Journey as Influencer</h3>
-                        <p class="banner_des">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum
+                        <p class="banner__des">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum
                             sed scelerisque eros. Lectus faucibus.</p>
-                        <button class="btn">Preebook now <i class="fa-solid fa-arrow-right"></i></button>
+                        <button class="btn">Preebook now  <i class="fa-solid fa-arrow-right"></i></button>
                     </div>
                     <div class="image__wrap">
                         <img src="images/main-camera.png" alt="">
