brand section html & css add

--- a/index.html
+++ b/index.html
@@ -49,6 +49,35 @@
                 </div>
             </div>
         </section>
+<!-- brand section html  -->
+<section class="brand">
+    <div class="container">
+        <div class="brand__wrapper">
+            <div>
+                <img src="logos/Alibaba.svg" alt="">
+            </div>
+            <div>
+                <img src="logos/Amazon.svg" alt="">
+            </div>
+            <div>
+                <img src="logos/Daraz.pk Logo.svg" alt="">
+            </div>
+            <div>
+                <img src="logos/Ebay.svg" alt="">
+            </div>
+            <div>
+                <img src="logos/Rakuten.svg" alt="">
+            </div>
+            <div>
+                <img src="logos/Target.svg" alt="">
+            </div>
+            <div>
+                <img src="logos/Walmart.svg" alt="">
+            </div>
+        </div>
+    </div>
+</section>
+
     </main>
 
 </body>
