collection product add

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <h3 class="banner__title">Start your Journey as Influencer</h3>
                         <p class="banner__des">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum
                             sed scelerisque eros. Lectus faucibus.</p>
-                        <button class="btn">Preebook now  <i class="fa-solid fa-arrow-right"></i></button>
+                        <button class="btn">Preebook now <i class="fa-solid fa-arrow-right"></i></button>
                     </div>
                     <div class="image__wrap">
                         <img src="images/main-camera.png" alt="">
@@ -49,35 +49,218 @@
                 </div>
             </div>
         </section>
-<!-- brand section html  -->
-<section class="brand">
-    <div class="container">
-        <div class="brand__wrapper">
-            <div>
-                <img src="logos/Alibaba.svg" alt="">
+        <!-- brand section html  -->
+        <section class="brand">
+            <div class="container">
+                <div class="brand__wrapper">
+                    <div>
+                        <img src="logos/Alibaba.svg" alt="">
+                    </div>
+                    <div>
+                        <img src="logos/Amazon.svg" alt="">
+                    </div>
+                    <div>
+                        <img src="logos/Daraz.pk Logo.svg" alt="">
+                    </div>
+                    <div>
+                        <img src="logos/Ebay.svg" alt="">
+                    </div>
+                    <div>
+                        <img src="logos/Rakuten.svg" alt="">
+                    </div>
+                    <div>
+                        <img src="logos/Target.svg" alt="">
+                    </div>
+                    <div>
+                        <img src="logos/Walmart.svg" alt="">
+                    </div>
+                </div>
             </div>
-            <div>
-                <img src="logos/Amazon.svg" alt="">
-            </div>
-            <div>
-                <img src="logos/Daraz.pk Logo.svg" alt="">
-            </div>
-            <div>
-                <img src="logos/Ebay.svg" alt="">
-            </div>
-            <div>
-                <img src="logos/Rakuten.svg" alt="">
-            </div>
-            <div>
-                <img src="logos/Target.svg" alt="">
-            </div>
-            <div>
-                <img src="logos/Walmart.svg" alt="">
-            </div>
-        </div>
-    </div>
-</section>
+        </section>
+        <!-- product section html  -->
 
+        <section class="products">
+            <div class="container">
+                <h3 class="section__title">Popular Collection</h3>
+                <div class="products__wrapper">
+
+                    <div class="single__product">
+                        <img src="images/tripod.png" alt="">
+                        <div class="product__info">
+                            <h3 class="product__title">Flex Tripod</h3>
+                            <h4 class="price">$50.48</h4>
+                            <p class="ratting">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                                <span>4.99</span>
+
+                            </p>
+                            <p class="product__des">Wordwide shifting available
+                                Buyers protection possible!</p>
+                        </div>
+
+                    </div>
+                    <div class="single__product"> 
+                        <img src="images/mic.png" alt="">
+                        <div class="product__info">
+                            <h3 class="product__title">microphone</h3>
+                            <h4 class="price">$120.25</h4>
+                            <p class="ratting">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                                <span>4.99</span>
+
+                            </p>
+                            <p class="product__des">Wordwide shifting available
+                                Buyers protection possible!</p>
+                        </div>
+
+                    </div>
+                    <div class="single__product">
+                        <img src="images/airpod.png" alt="">
+                        <div class="product__info">
+                            <h3 class="product__title">Airbuds</h3>
+                            <h4 class="price">$100.00</h4>
+                            <p class="ratting">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                                <span>4.99</span>
+
+                            </p>
+                            <p class="product__des">Wordwide shifting available
+                                Buyers protection possible!</p>
+                        </div>
+
+                    </div>
+                    <div class="single__product">
+                        <img src="images/mic.png" alt="">
+                        <div class="product__info">
+                            <h3 class="product__title">Drone</h3>
+                            <h4 class="price">$980.25</h4>
+                            <p class="ratting">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                                <span>4.99</span>
+
+                            </p>
+                            <p class="product__des">Wordwide shifting available
+                                Buyers protection possible!</p>
+                        </div>
+
+                    </div>
+                    <div class="single__product">
+                        <img src="images/lights.png" alt="">
+                        <div class="product__info">
+                            <h3 class="product__title">Light Setup</h3>
+                            <h4 class="price">$1200.00</h4>
+                            <p class="ratting">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                                <span>4.99</span>
+
+                            </p>
+                            <p class="product__des">Wordwide shifting available
+                                Buyers protection possible!</p>
+                        </div>
+
+                    </div>
+                    <div class="single__product">
+                        <img src="images/setup.png" alt="">
+                        <div class="product__info">
+                            <h3 class="product__title">Photoshoot set</h3>
+                            <h4 class="price">$820.40</h4>
+                            <p class="ratting">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                                <span>4.99</span>
+
+                            </p>
+                            <p class="product__des">Wordwide shifting available
+                                Buyers protection possible!</p>
+                        </div>
+
+                    </div>
+                    <div class="single__product">
+                        <img src="images/camera.png" alt="">
+                        <div class="product__info">
+                            <h3 class="product__title">Vlogging Camera</h3>
+                            <h4 class="price">$1800.80</h4>
+                            <p class="ratting">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                                <span>4.99</span>
+
+                            </p>
+                            <p class="product__des">Wordwide shifting available
+                                Buyers protection possible!</p>
+                        </div>
+
+                    </div>
+                    <div class="single__product">
+                        <img src="images/single-light.png" alt="">
+                        <div class="product__info">
+                            <h3 class="product__title">Green Screen</h3>
+                            <h4 class="price">$25.48</h4>
+                            <p class="ratting">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                                <span>4.99</span>
+
+                            </p>
+                            <p class="product__des">Wordwide shifting available
+                                Buyers protection possible!</p>
+                        </div>
+
+                    </div>
+                    <div class="single__product">
+                        <img src="images/mic.png" alt="">
+                        <div class="product__info">
+                            <h3 class="product__title">Action Camera</h3>
+                            <h4 class="price">$380.00</h4>
+                            <p class="ratting">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                                <span>4.99</span>
+
+                            </p>
+                            <p class="product__des">Wordwide shifting available
+                                Buyers protection possible!</p>
+                        </div>
+
+                    </div>
+                </div>
+<div class="btn_wrapper">
+    <button class="btn">See More <i class="fa-solid fa-arrow-right"></i></button>
+</div>
+            </div>
+        </section>
     </main>
 
 </body>
