--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         </div>
 
                     </div>
-                    <div class="single__product"> 
+                    <div class="single__product">
                         <img src="images/mic.png" alt="">
                         <div class="product__info">
                             <h3 class="product__title">microphone</h3>
@@ -256,9 +256,31 @@
 
                     </div>
                 </div>
-<div class="btn_wrapper">
-    <button class="btn">See More <i class="fa-solid fa-arrow-right"></i></button>
-</div>
+                <div class="btn_wrapper">
+                    <button class="btn">See More <i class="fa-solid fa-arrow-right"></i></button>
+                </div>
+            </div>
+        </section>
+
+        <!-- featured product  -->
+
+        <section class="featured__product">
+            <div class="container">
+                <div class="featured__product_wrapper">
+                    <div class="image_wrap">
+                        <img src="images/gear.png" alt="">
+
+                    </div>
+                    <div class="content__wrap">
+                        <h3 class="featured__title">Featured products at one place</h3>
+                        <p class="featured__des">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+                            sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt
+                            nostrud amet.</p>
+
+                        <button class="btn">Join Now <i class="fa-solid fa-arrow-right"></i></button>
+
+                    </div>
+                </div>
             </div>
         </section>
     </main>
