--- a/index.html
+++ b/index.html
@@ -284,7 +284,18 @@
             </div>
         </section>
     </main>
-
+<footer class="footer">
+    <div class="container">
+       <h3 class="logo__content">Influencer products</h3>
+       <p class="copy__right"> Copyright © 2020  influencer products<br> All rights reserved</p>
+       <ul>
+        <li><i class="fa-brands fa-instagram"></i></li>
+        <li><i class="fa-brands fa-dribbble"></i></li>
+        <li><i class="fa-brands fa-twitter"></i></li>
+        <li><i class="fa-brands fa-youtube"></i></li>
+       </ul>
+    </div>
+</footer>
 </body>
 
 </html>
