--- a/index.html
+++ b/index.html
@@ -16,7 +16,20 @@
     <!-- header html  -->
     <header>
         <div class="container">
-            <nav>
+            <!-- phone nav  -->
+              <nav class="phone__nav">
+                <div class="bar">
+                    <i class="fa-solid fa-bars"></i>
+                </div>
+                <div class="logo">
+                    <h3 class="logo__title">Influencer products</h3>
+                </div>
+                <ul>
+                    <li><i class="fa-solid fa-cart-shopping"></i></li>
+                </ul>
+              </nav>
+<!-- desktop mav  -->
+            <nav class="destop__nav">
                 <div class="logo">
                     <h3 class="logo__title">Influencer products</h3>
                 </div>
