sing up page create and design

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
           <ul class="mobile__menu" id="mobile__menu">
             <li><a href="#">Home</a></li>
             <li><a href="#">Products</a></li>
-            <li><a href="#">Sign up</a></li>
-            <li><a href="#">Log In</a></li>
+            <li><a href="singup.html">Sign up</a></li>
+            <li><a href="singup.html">Log In</a></li>
             
           </ul>
         </nav>
@@ -49,7 +49,7 @@
           <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">Products</a></li>
-            <li><a href="#">Sign up</a></li>
+            <li><a href="singup.html">Sign up</a></li>
             <li><a href="#">Log In</a></li>
             <li><i class="fa-solid fa-magnifying-glass"></i></li>
             <li><i class="fa-solid fa-cart-shopping"></i></li>
