--- a/login.html
+++ b/login.html
@@ -59,16 +59,8 @@
           <img src="images/singup.png" alt="" />
         </div>
         <div class="singup__form">
-            <h3 class="section__title">Sing Up Now</h3>
+            <h3 class="section__title">Login Now</h3>
           <form action="">
-            <div>
-                <label for="">Name *</label>
-                <input type="text" name="name" placeholder="Enter Your Name" />
-            </div>
-            <div>
-                <label for="">Phone Number *</label>
-                <input type="number" name="name" placeholder="Enter Your Phone" />
-            </div>
             <div>
                 <label for="">Email *</label>
                 <input type="email" name="email" placeholder="Enter Your Email" />
@@ -78,8 +70,8 @@
                 <input type="password" name="password" placeholder="Enter Your Password" />
             </div>
             <div class="">
-                <input class="btn" type="submit" value="SingUp" />
-                <p>Already have an account? <a href="login.html">Login</a></p>
+                <input class="btn" type="submit" value="Login" />
+                <p>Don't have an account? <a href="singup.html">SingUp</a></p>
             </div>
           </form>
         </div>
