image hover effect

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <!-- search bar  -->
             <li><i class="fa-solid fa-magnifying-glass"></i></li>
             <!-- search bar  -->
-            <li><i class="fa-solid fa-cart-shopping"></i></li>
+            <li><i class="fa-solid fa-cart-shopping" id="cardQuantity"></i></li>
           </ul>
         </nav>
       </div>
@@ -130,7 +130,7 @@
           <h3 class="section__title">Popular Collection</h3>
           <div class="col__three">
             <div class="card">
-              <img src="images/tripod.png" alt="" />
+            <figure>  <img src="images/tripod.png" alt="" /></figure>
               <div class="product__info">
                 <h3 class="product__title">Flex Tripod</h3>
                 <h4 class="price">$50.48</h4>
@@ -148,7 +148,7 @@
               </div>
             </div>
             <div class="card">
-              <img src="images/mic.png" alt="" />
+              <figure><img src="images/mic.png" alt="" /></figure>
               <div class="product__info">
                 <h3 class="product__title">microphone</h3>
                 <h4 class="price">$120.25</h4>
@@ -166,7 +166,7 @@
               </div>
             </div>
             <div class="card">
-              <img src="images/airpod.png" alt="" />
+             <figure> <img src="images/airpod.png" alt="" /></figure>
               <div class="product__info">
                 <h3 class="product__title">Airbuds</h3>
                 <h4 class="price">$100.00</h4>
@@ -184,7 +184,7 @@
               </div>
             </div>
             <div class="card">
-              <img src="images/mic.png" alt="" />
+            <figure>  <img src="images/mic.png" alt="" /></figure>
               <div class="product__info">
                 <h3 class="product__title">Drone</h3>
                 <h4 class="price">$980.25</h4>
@@ -202,7 +202,7 @@
               </div>
             </div>
             <div class="card">
-              <img src="images/lights.png" alt="" />
+              <figure><img src="images/lights.png" alt="" /></figure>
               <div class="product__info">
                 <h3 class="product__title">Light Setup</h3>
                 <h4 class="price">$1200.00</h4>
@@ -220,7 +220,7 @@
               </div>
             </div>
             <div class="card">
-              <img src="images/setup.png" alt="" />
+              <figure><img src="images/setup.png" alt="" /></figure>
               <div class="product__info">
                 <h3 class="product__title">Photoshoot set</h3>
                 <h4 class="price">$820.40</h4>
@@ -238,7 +238,7 @@
               </div>
             </div>
             <div class="card">
-              <img src="images/camera.png" alt="" />
+              <figure><img src="images/camera.png" alt="" /></figure>
               <div class="product__info">
                 <h3 class="product__title">Vlogging Camera</h3>
                 <h4 class="price">$1800.80</h4>
@@ -256,7 +256,7 @@
               </div>
             </div>
             <div class="card">
-              <img src="images/single-light.png" alt="" />
+              <figure><img src="images/single-light.png" alt="" /></figure>
               <div class="product__info">
                 <h3 class="product__title">Green Screen</h3>
                 <h4 class="price">$25.48</h4>
@@ -274,7 +274,7 @@
               </div>
             </div>
             <div class="card">
-              <img src="images/mic.png" alt="" />
+              <figure><img src="images/mic.png" alt="" /></figure>
               <div class="product__info">
                 <h3 class="product__title">Action Camera</h3>
                 <h4 class="price">$380.00</h4>
