quantity update functionality added

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <!-- search bar  -->
             <li><i class="fa-solid fa-magnifying-glass"></i></li>
             <!-- search bar  -->
-            <li><i class="fa-solid fa-cart-shopping" id="cardQuantity"></i></li>
+            <li> <a href="#"><i class="fa-solid fa-cart-shopping"> <sup style="color:red" id="cardQuantity">0</sup> </i></a> </li>
           </ul>
         </nav>
       </div>
