--- a/singup.html
+++ b/singup.html
@@ -54,7 +54,7 @@
     </header>
 
     <div class="container">
-      <div class="singup_wrapper col__two">
+      <div class="singup_wrapper col__two card">
         <div class="singup__img">
           <img src="images/singup.png" alt="" />
         </div>
