category product add and show ui

--- a/index.html
+++ b/index.html
@@ -128,8 +128,9 @@
       <section class="products section__gap">
         <div class="container">
           <h3 class="section__title">Popular Collection</h3>
-          <div class="col__three">
-            <div class="card">
+          <div class="col__three" id="category">
+            <!-- <div class="card">
+
             <figure>  <img src="images/tripod.png" alt="" /></figure>
               <div class="product__info">
                 <h3 class="product__title">Flex Tripod</h3>
@@ -290,7 +291,7 @@
                   Wordwide shifting available Buyers protection possible!
                 </p>
               </div>
-            </div>
+            </div> -->
           </div>
           <div class="btn_wrapper">
             <button class="btn">
