client review section added

--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
       src="https://kit.fontawesome.com/286c7c8f95.js"
       crossorigin="anonymous"
     ></script>
-    <!-- Link to the file hosted on your server, -->
-<link rel="stylesheet" href="path-to-the-file/splide.min.css">
+    <!-- splide css -->
+    <link
+      rel="stylesheet" href="css/splide.css"
+    />
 
-
-<!-- or link to the CDN -->
-<link rel="stylesheet" href="url-to-cdn/splide.min.css">
     <!-- styles  -->
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -151,14 +150,14 @@
             <div class="services__content__wrap">
               <img src="images/half-filled-rating-star_1.png" alt="" />
               <div>
-                <h3>Quality & Saving </h3>
+                <h3>Quality & Saving</h3>
                 <p>Provide high quality products.</p>
               </div>
             </div>
             <div class="services__content__wrap">
               <img src="images/credit-card_2.png" alt="" />
               <div>
-                <h3>100% Payment Secure </h3>
+                <h3>100% Payment Secure</h3>
                 <p>Your payment are safe with us.</p>
               </div>
             </div>
@@ -173,7 +172,6 @@
         </div>
       </section>
       <!-- services section html end here -->
-
       <!-- product section html  -->
 
       <section class="products section__gap">
@@ -223,6 +221,51 @@
           </div>
         </div>
       </section>
+
+
+<!-- client review section  html start here -->
+<section class="section__gap" id="review">
+<div class="container">
+  <h3 class="section__title">What is client say's</h3>
+  <div class="splide" >
+    <div class="splide__track">
+      <div class="splide__list">
+        <div class="splide__slide">
+          <img src="images/nora.png" alt="">
+          <h3>Nora</h3>
+          <p>The goods arrived on time! Everything is well packed in general, and I'm happy with the order, seller recommend!!</p>
+        </div>
+        <div class="splide__slide">
+          <img src="images/isla.png" alt="">
+          <h3>Isla</h3>
+          <p>Pleasantly surprised. Thanks to the Seller. I recommend!!! Five stars.  </p>
+        </div>
+        <div class="splide__slide">
+          <img src="images/zoe.png" alt="">
+          <h3>Zoe</h3>
+          <p>Very high quality and beautiful. Looks the same as in the photos. Good value for money. I Recommend it.</p>
+        </div>
+        <div class="splide__slide">
+          <img src="images/stella.png" alt="">
+          <h3>Stella</h3>
+          <p>Excellent product from an excellent seller. The postage was fast. Highly recommended!</p> </div>
+      </div>
+    </div>
+  </div>
+</div>
+</section>
+<section class="splide" aria-label="Splide Basic HTML Example">
+  <div class="splide__track">
+    <ul class="splide__list">
+      <li class="splide__slide">Slide 01</li>
+      <li class="splide__slide">Slide 02</li>
+      <li class="splide__slide">Slide 03</li>
+    </ul>
+  </div>
+</section>
+<!-- client review section  html end here -->
+
+
     </main>
     <footer class="footer section__gap">
       <div class="container">
@@ -239,6 +282,7 @@
         </ul>
       </div>
     </footer>
+    <script src="js/splide.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
